# yolo-portable-cli

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: lib.rs  main.rs
scripts/: gen_reference.py  verify.py
tests/reference/: bus.json  dog.json  zidane.json
tests/reference/yolo11n/: bus.json  dog.json  zidane.json
tests/reference/yolo12n/: bus.json  dog.json  zidane.json
tests/reference/yolov10n/: bus.json  dog.json  zidane.json
tests/reference/yolov5nu/: bus.json  dog.json  zidane.json
tests/reference/yolov8n/: bus.json  dog.json  zidane.json
tests/reference/yolov9t/: bus.json  dog.json  zidane.json
