[package]
name = "yolo-cli"
version = "0.0.1"
edition = "2021"
description = "Portable single-binary YOLO ONNX inference CLI (pure Rust, no C dependency)"
license = "Apache-2.0"
build = "build.rs"

[features]
default = []
# Enable this feature to build the `yolo-cli-bundled` binary (the model is
# embedded at compile time via `include_bytes!`).  Without it, only `yolo-cli`
# (the free variant that takes --model at runtime) is built, and the
# YOLO_MODEL_ONNX env var is ignored entirely.
bundled = []

[lib]
name = "yolo_cli"
path = "src/lib.rs"

[[bin]]
name = "yolo-cli"
path = "src/bin/yolo-cli.rs"

[[bin]]
name = "yolo-cli-bundled"
path = "src/bin/yolo-cli-bundled.rs"
required-features = ["bundled"]

[dependencies]
tract-onnx = { version = "0.21", default-features = false }
image      = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
anyhow     = { version = "1", default-features = false, features = ["std"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = true
debug         = false
incremental   = false
